--- a/app/src/main/res/layout/activity_doctors.xml
+++ b/app/src/main/res/layout/activity_doctors.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="102dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Best doctors "
+        android:text="@string/best_doctors"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -64,7 +64,7 @@
             android:layout_toEndOf="@+id/doctor1"
             android:foregroundGravity="center"
             android:gravity="center"
-            android:text="Dr. Nermin Diab"
+            android:text="@string/dr_nermin_diab"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -78,8 +78,7 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:layout_toEndOf="@+id/doctor1"
-            android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+            android:text="@string/kidney_and_diabetes_consultant_nephrologist_specialized_in_adult"
             android:textColor="@color/gray"
             android:textSize="14sp"
             android:transitionName="desctransaction" />
@@ -114,7 +113,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginTop="20dp"
             android:foregroundGravity="center"
             android:gravity="center"
-            android:text="Dr. Maged Habib "
+            android:text="@string/dr_maged_habib"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -130,7 +129,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_toStartOf="@+id/doctor2"
-            android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+            android:text="@string/consultant_of_nephrology_diabetes_internal_medicine_immunology"
             android:textColor="@color/gray"
             android:textSize="14sp"
             android:transitionName="desctransaction2" />
@@ -163,7 +162,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/doctor3"
-            android:text="Dr. Samar El-Sayed"
+            android:text="@string/dr_samar_el_sayed"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -177,7 +176,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:layout_toEndOf="@+id/doctor3"
-            android:text="Internist specialized in Adult Cardiology, Pediatric Cardiology, Adult Gastroenterology and ...."
+            android:text="@string/internist_specialized_in_adult_cardiology_pediatric_cardiology_adult_gastroenterology_and"
             android:textColor="@color/gray"
             android:textSize="14sp"
             android:transitionName="desctransaction3" />
@@ -210,7 +209,7 @@ Nephrologist specialized in Adult ..."
             android:layout_alignParentTop="true"
             android:layout_marginStart="18dp"
             android:layout_marginTop="20dp"
-            android:text="Dr. Hussain Farouk"
+            android:text="@string/dr_hussain_farouk"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -226,7 +225,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginTop="1dp"
             android:layout_marginEnd="6dp"
             android:layout_toStartOf="@+id/doctor4"
-            android:text="Kidney disease, renal insufficiency, nephrolithiasis and immunology, dialysis ..."
+            android:text="@string/kidney_disease_renal_insufficiency_nephrolithiasis_and_immunology_dialysis"
             android:textColor="@color/gray"
             android:textSize="14sp"
             android:transitionName="desctransaction4" />
@@ -259,7 +258,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/doctor5"
-            android:text="Dr. Rania Al-Shall"
+            android:text="@string/dr_rania_al_shall"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -273,7 +272,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:layout_toEndOf="@+id/doctor5"
-            android:text="Consultant of nephrology and kidney transplantation and consultant ..."
+            android:text="@string/consultant_of_nephrology_and_kidney_transplantation_and_consultant"
             android:textColor="@color/gray"
             android:textSize="14sp"
             android:transitionName="desctransaction5" />
@@ -324,7 +323,7 @@ Nephrologist specialized in Adult ..."
             android:layout_alignParentTop="true"
             android:layout_marginStart="18dp"
             android:layout_marginTop="20dp"
-            android:text="Dr. Mohamed Deif"
+            android:text="@string/dr_mohamed_deif"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -340,7 +339,7 @@ Nephrologist specialized in Adult ..."
             android:layout_marginTop="1dp"
             android:layout_marginEnd="6dp"
             android:layout_toStartOf="@+id/doctor6"
-            android:text="Consultant of Nephrology, Cardiology and Internal Medicine ..."
+            android:text="@string/consultant_of_nephrology_cardiology_and_internal_medicine"
             android:textColor="@color/gray"
             android:textSize="14sp"
             android:transitionName="desctransaction6" />
