--- a/app/src/main/res/layout/activity_kidney_upload.xml
+++ b/app/src/main/res/layout/activity_kidney_upload.xml
@@ -51,7 +51,7 @@
         android:layout_marginStart="33dp"
         android:layout_marginEnd="117dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Please Upload Your report"
+        android:text="@string/please_upload_your_report"
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:background="@drawable/custom_button"
         android:clickable="false"
         android:fontFamily="sans-serif-medium"
-        android:text="Upload Now"
+        android:text="@string/upload_now"
         android:textAllCaps="false"
         android:textColor="@color/color3"
         android:textSize="16sp"
