--- a/app/src/main/res/layout/activity_lung_doctors.xml
+++ b/app/src/main/res/layout/activity_lung_doctors.xml
@@ -80,7 +80,7 @@
                 android:layout_toEndOf="@+id/lung_doctor1"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Ahmed Ezzat"
+                android:text="@string/dr_ahmed_ezzat"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -94,7 +94,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/lung_doctor1"
-                android:text="Consultant of internal chest diseases and allergies - Ain Shams University ..."
+                android:text="@string/consultant_of_internal_chest_diseases_and_allergies_ain_shams_university"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction" />
@@ -129,7 +129,7 @@
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Fatima Zahra"
+                android:text="@string/dr_fatima_zahra"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -145,7 +145,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/lung_doctor2"
-                android:text="Instructor and Consultant of Chest, Respiratory and Allergy Diseases ..."
+                android:text="@string/instructor_and_consultant_of_chest_respiratory_and_allergy_diseases"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction2" />
@@ -184,7 +184,7 @@
                 android:layout_toEndOf="@+id/lung_doctor3"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr.Emad Eddin"
+                android:text="@string/dr_emad_eddin"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -198,7 +198,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/lung_doctor3"
-                android:text="Professor of Pulmonary Medicine and Allergy, Faculty of Medicine, Alexandria University ..."
+                android:text="@string/professor_of_pulmonary_medicine_and_allergy_faculty_of_medicine_alexandria_university"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction3" />
@@ -233,7 +233,7 @@
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Salma Abdelhady"
+                android:text="@string/dr_salma_abdelhady"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -249,7 +249,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/lung_doctor4"
-                android:text="Consultant of Pediatric Chest and Respiratory Diseases, Faculty Member, Faculty of ..."
+                android:text="@string/consultant_of_pediatric_chest_and_respiratory_diseases_faculty_member_faculty_of"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction4" />
@@ -288,7 +288,7 @@
                 android:layout_toEndOf="@+id/lung_doctor5"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr.Haitham Sami"
+                android:text="@string/dr_haitham_sami"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -302,7 +302,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/lung_doctor5"
-                android:text="Chest Diseases Consultant. Chest and Respiratory ..."
+                android:text="@string/chest_diseases_consultant_chest_and_respiratory"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction5" />
@@ -337,7 +337,7 @@
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Amani Khalil"
+                android:text="@string/dr_amani_khalil"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -353,7 +353,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/lung_doctor6"
-                android:text="Master of Chest Diseases and Allergy (Ain Shams University)..."
+                android:text="@string/master_of_chest_diseases_and_allergy_ain_shams_university"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction6" />
