--- a/app/src/main/res/layout/activity_skin_doctors.xml
+++ b/app/src/main/res/layout/activity_skin_doctors.xml
@@ -79,7 +79,7 @@
                 android:layout_toEndOf="@+id/skin_doc1"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr.Ghada AbdelHadi"
+                android:text="@string/dr_ghada_abdelhadi"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -93,7 +93,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/skin_doc1"
-                android:text="PhD and consultant of dermatology, dermatology and laser therapy ..."
+                android:text="@string/phd_and_consultant_of_dermatology_dermatology_and_laser_therapy"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction" />
@@ -128,7 +128,7 @@
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maher Mahmoud "
+                android:text="@string/dr_maher_mahmoud"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -144,7 +144,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/skin_doc2"
-                android:text="Consultant of dermatology and cosmetology and consultant of genitourinary diseases ..."
+                android:text="@string/consultant_of_dermatology_and_cosmetology_and_consultant_of_genitourinary_diseases"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction2" />
@@ -181,7 +181,7 @@
                 android:layout_toEndOf="@+id/skin_doc3"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Ghada Rabie"
+                android:text="@string/dr_ghada_rabie"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -195,7 +195,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/skin_doc3"
-                android:text="Dermatology, Cosmetology and Laser Specialist, Kasr Al-Ainy - Cairo University ..."
+                android:text="@string/dermatology_cosmetology_and_laser_specialist_kasr_al_ainy_cairo_university"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction3" />
@@ -246,7 +246,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/skin_doc4"
-                android:text="Dermatologist specialized in plastic surgery, burns, plastic surgery and laser, venereal diseases ..."
+                android:text="@string/dermatologist_specialized_in_plastic_surgery_burns_plastic_surgery_and_laser_venereal_diseases"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction4" />
@@ -283,7 +283,7 @@
                 android:layout_toEndOf="@+id/skin_doc5"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Dalia Mohsen"
+                android:text="@string/dr_dalia_mohsen"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -297,7 +297,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/skin_doc5"
-                android:text="Consultant dermatologist, cosmetic and laser at Cairo University. A dermatologist ..."
+                android:text="@string/consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction5" />
@@ -332,7 +332,7 @@
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Hany Khalil"
+                android:text="@string/dr_hany_khalil"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -348,7 +348,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/skin_doc6"
-                android:text="Dermatologist specialized in Adult Dermatology, Cosmetic and Laser, Genital Diseases ..."
+                android:text="@string/dermatologist_specialized_in_adult_dermatology_cosmetic_and_laser_genital_diseases"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction6" />
