--- a/app/src/main/res/layout/activity_successful.xml
+++ b/app/src/main/res/layout/activity_successful.xml
@@ -27,7 +27,7 @@
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif"
-        android:text="Continue"
+        android:text="@string/Continue"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-        android:text="Your lung is healthy"
+        android:text="@string/your_lung_is_healthy"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-        android:text="We wish you good health"
+        android:text="@string/we_wish_you_good_health"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
         android:textSize="20sp"
