--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,7 +14,8 @@
             android:icon="@drawable/doc_icon"/>
 
         <item android:id="@+id/chat"
-            android:title="@string/chat"/>
+            android:title="@string/chat"
+            android:icon="@drawable/chat"/>
 
 
         <item android:id="@+id/about_us"
