--- a/app/src/main/res/layout/activity_best_doctors.xml
+++ b/app/src/main/res/layout/activity_best_doctors.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".best_doctors">
+    tools:context=".menu.best_doctors">
 
 <LinearLayout
     android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="Eyes"
+                    android:text="@string/eyes"
                     android:textColor="@color/black"
                     android:textSize="24dp"
                     android:textStyle="bold" />
@@ -129,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="Lungs"
+                    android:text="@string/lungs"
                     android:textColor="@color/black"
                     android:textSize="24dp"
                     android:textStyle="bold" />
@@ -178,7 +178,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="Kidneys"
+                    android:text="@string/kidneys"
                     android:textColor="@color/black"
                     android:textSize="24dp"
                     android:textStyle="bold" />
@@ -219,7 +219,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="Skin"
+                    android:text="@string/skin"
                     android:textColor="@color/black"
                     android:textSize="24dp"
                     android:textStyle="bold" />
