--- a/app/src/main/res/layout/activity_chat_home.xml
+++ b/app/src/main/res/layout/activity_chat_home.xml
@@ -31,6 +31,7 @@
         android:textColor="@color/white"
         android:textSize="14dp"
         android:textStyle="bold"
+        android:text="kk"
         app:layout_constraintBottom_toBottomOf="@id/img_prof"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/img_prof"
