--- a/app/src/main/res/layout/activity_lung_doc2.xml
+++ b/app/src/main/res/layout/activity_lung_doc2.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Fatima Zahra"
+        android:text="@string/dr_fatima_zahra"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,8 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-185dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="
-Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Chest and Respiratory Diseases Specialized in Autoimmune Diseases, Adult Allergy and Immunology."
+        android:text="@string/lecturer_and_consultant_of_chest_respiratory_and_allergy_diseasesdoctor_of_chest_and_respiratory_diseases_specialized_in_autoimmune_diseases_adult_allergy_and_immunology"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction2" />
@@ -89,7 +88,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="400 EGP"
+        android:text="@string/_400_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -105,7 +104,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Dar Al Fouad Hospital (Nasr City)"
+        android:text="@string/dar_al_fouad_hospital_nasr_city"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -117,7 +116,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01002222545"
+        android:text="@string/_01002222545"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
