--- a/app/src/main/res/layout/activity_lung_doc3.xml
+++ b/app/src/main/res/layout/activity_lung_doc3.xml
@@ -31,7 +31,7 @@
         android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr.. Emad Eddin"
+        android:text="@string/dr_emad_eddin"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -47,8 +47,7 @@
         android:layout_marginTop="-250dp"
         android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView5"
-        android:text="Professor of Pulmonary Medicine and Allergy, Faculty of Medicine, Alexandria University
-Consultant bronchoscopy and thoracic intensive care."
+        android:text="@string/professor_of_pulmonary_medicine_and_allergy_faculty_of_medicine_alexandria_university_consultant_bronchoscopy_and_thoracic_intensive_care"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction3" />
@@ -91,7 +90,7 @@ Consultant bronchoscopy and thoracic intensive care."
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="250 EGP"
+        android:text="@string/_250_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -107,8 +106,7 @@ Consultant bronchoscopy and thoracic intensive care."
         android:layout_marginTop="19dp"
         android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="8 College of Medicine Street, Doctors Tower, Raml Station
-Raml Station - Alexandria"
+        android:text="@string/_8_college_of_medicine_street_doctors_tower_raml_station_raml_station_alexandria"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -120,7 +118,7 @@ Raml Station - Alexandria"
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="4855593"
+        android:text="@string/_4855593"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
