--- a/app/src/main/res/layout/activity_lung_doc4.xml
+++ b/app/src/main/res/layout/activity_lung_doc4.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr.Salma Abdelhady"
+        android:text="@string/dr_salma_abdelhady"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,8 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-160dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of Pediatric Chest and Respiratory Diseases, Faculty Member, Faculty of Medicine, Ain Shams University, and Ph.D. in Pediatrics and Neonatology
-"
+        android:text="@string/consultant_of_pediatric_chest_and_respiratory_diseases_faculty_member_faculty_of_medicine_ain_shams_university_and_ph_d_in_pediatrics_and_neonatology"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction4" />
@@ -89,7 +88,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="250 EGP"
+        android:text="@string/_250_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -105,8 +104,7 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="19dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Nasr City, the ground floor of Building 20, Tayaran Street (near Rabaa Mosque)
-"
+        android:text="@string/nasr_city_the_ground_floor_of_building_20_tayaran_street_near_rabaa_mosque"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -118,7 +116,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01032310244"
+        android:text="@string/_01032310244"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
