--- a/app/src/main/res/layout/activity_lung_doc6.xml
+++ b/app/src/main/res/layout/activity_lung_doc6.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Amani Khalil"
+        android:text="@string/dr_amani_khalil"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,9 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-185dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Master of Chest Diseases and Allergy (Ain Shams University)
-Chest and Allergy Specialist
-"
+        android:text="@string/master_of_chest_diseases_and_allergy_ain_shams_university_chest_and_allergy_specialist"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction6" />
@@ -90,7 +88,7 @@ Chest and Allergy Specialist
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="140 EGP"
+        android:text="@string/_140_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -106,9 +104,7 @@ Chest and Allergy Specialist
         android:layout_marginTop="30dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="6056 Al-Miraj City - Zahraa El-Maadi, next to Aba El-Dahab Ceramic, Cairo, Cairo Governorate, Egypt 6056
-
-"
+        android:text="@string/_6056_al_miraj_city_zahraa_el_maadi_next_to_aba_el_dahab_ceramic_cairo_cairo_governorate_egypt_6056"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -120,7 +116,7 @@ Chest and Allergy Specialist
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01155175888"
+        android:text="@string/_01155175888"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
