--- a/app/src/main/res/layout/activity_shared_doc3.xml
+++ b/app/src/main/res/layout/activity_shared_doc3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bback"
-    tools:context=".shared_doc3">
+    tools:context=".kidneys.shared_doc3">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -30,7 +30,7 @@
         android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Samar El-Sayed"
+        android:text="@string/dr_samar_el_sayed"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -44,7 +44,7 @@
         android:layout_marginStart="-165dp"
         android:layout_marginTop="-250dp"
         android:layout_toEndOf="@+id/imageView5"
-        android:text="Internist specialized in Adult Cardiology, Pediatric Cardiology, Adult Gastroenterology and Endoscopy, Adult Kidney, Adult Liver, Adult Diabetes and Endocrinology, General Internal Medicine"
+        android:text="@string/internist_specialized_in_adult_cardiology_pediatric_cardiology_adult_gastroenterology_and_endoscopy_adult_kidney_adult_liver_adult_diabetes_and_endocrinology_general_internal_medicine"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction3" />
@@ -87,7 +87,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="100 EGP"
+        android:text="@string/_100_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -103,7 +103,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Agami: Alex-Matrouh Road"
+        android:text="@string/agami_alex_matrouh_road"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -115,7 +115,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="7dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01204748392"
+        android:text="@string/_01204748392"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
