--- a/app/src/main/res/layout/activity_shared_doc6.xml
+++ b/app/src/main/res/layout/activity_shared_doc6.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bback"
-    tools:context=".shared_doc6">
+    tools:context=".kidneys.shared_doc6">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -29,7 +29,7 @@
         android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Mohamed Deif"
+        android:text="@string/dr_mohamed_deif"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="-195dp"
         android:layout_toStartOf="@+id/imageView5"
         android:layout_toEndOf="@+id/imageView5"
-        android:text="Consultant of Nephrology, Cardiology and Internal Medicine . Nephrologist specialized in adult diabetes and endocrinology, general internal medicine, adult kidneys and adult urology"
+        android:text="@string/consultant_of_nephrology_cardiology_and_internal_medicine_nephrologist_specialized_in_adult_diabetes_and_endocrinology_general_internal_medicine_adult_kidneys_and_adult_urology"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction6" />
@@ -89,7 +89,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="200 EGP"
+        android:text="@string/_200_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -105,7 +105,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Raml Station: Faculty of Medicine"
+        android:text="@string/raml_station_faculty_of_medicine"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -117,7 +117,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01025830191"
+        android:text="@string/_01025830191"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
