--- a/app/src/main/res/layout/activity_skin_doc2.xml
+++ b/app/src/main/res/layout/activity_skin_doc2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/skinback"
-    tools:context=".skin_doc2">
+    tools:context=".skin.skin_doc2">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Maher Mahmoud "
+        android:text="@string/dr_maher_mahmoud"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,8 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-165dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of dermatology and cosmetology and consultant of genitourinary diseases and andrology and infertility Consultant of plastic surgery and laser therapy
-"
+        android:text="@string/consultant_of_dermatology_and_cosmetology_and_consultant_of_genitourinary_diseases_and_andrology_and_infertility_consultant_of_plastic_surgery_and_laser_therapy"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction2" />
@@ -89,7 +88,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="500 EGP"
+        android:text="@string/_500_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -105,8 +104,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Fifth Settlement - North Ninety Street - behind the Air Hospital - Clinic 14 - CMC Cairo
-"
+        android:text="@string/fifth_settlement_north_ninety_street_behind_the_air_hospital_clinic_14_cmc_cairo"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -118,7 +116,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01114654440"
+        android:text="@string/_01114654440"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
