--- a/app/src/main/res/layout/activity_skin_doc5.xml
+++ b/app/src/main/res/layout/activity_skin_doc5.xml
@@ -31,7 +31,7 @@
         android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Dalia Mohsen"
+        android:text="@string/dr_dalia_mohsen"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -47,8 +47,7 @@
         android:layout_marginTop="-250dp"
         android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView5"
-        android:text="Consultant dermatologist, cosmetic and laser at Cairo University. A dermatologist specialized in adult dermatology, plastic surgery and laser and pediatric dermatology
-."
+        android:text="@string/consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist_specialized_in_adult_dermatology_plastic_surgery_and_laser_and_pediatric_dermatology"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction5" />
@@ -107,7 +106,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Naqraha, Damanhour, El Beheira"
+        android:text="@string/naqraha_damanhour_el_beheira"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -119,7 +118,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="045 3300820"
+        android:text="@string/_045_3300820"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
