--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -52,7 +52,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/custom_button"
-                android:text="Ok"
+                android:text="@string/ok"
                 android:textAllCaps="false"
                 android:textColor="@color/color3"
                 android:textSize="16sp"
